--- a/main.tex
+++ b/main.tex
@@ -267,7 +267,7 @@ Given a set $S$ of covering glyphs and a fixed pie chart $C_i$ we can calculate 
 Now we want to derive all of the positions on the circle where the reference line can be positioned such that none of the dividing lines are covered on the boundary. We will derive the complementary intervals first, i.e., all the intervals that guarantee that at least one dividing line is occluded.
 
 \begin{lemma}
-  Given a set of occluded intervals $I=\{[a_1,b_1],...[a_k,b_k]\}$ (as angles) and a set of dividing lines $\{\alpha_1,...\alpha_m\}$ also given by angles, let $\beta_2,....,\beta_m$ be the counterclockwise distances from $\alpha_1$ to $\alpha_j$ and let $\mathcal{I}$ be the set system given by
+  Given a set of occluded intervals $I=\{[a_1,b_1],...[a_k,b_k]\}$ (as angles) and a set of dividing lines $\{\alpha_1,...\alpha_m\}$ also given by angles, let $\beta_2,....,\beta_m$ be the counterclockwise distances from $\alpha_1$ up to $\alpha_m$ with $\beta_j$ being the distance between $\alpha_1$ and $\alpha_j$, and let $\mathcal{I}$ be the set system given by
   \begin{align*}
     \mathcal{I}=I \cup \bigcup_{i=2}^m    \bigcup_{j=1}^k \{ [a_j-\beta_i,b_j-\beta_i]   \}.
   \end{align*}
@@ -275,9 +275,7 @@ Now we want to derive all of the positions on the circle where the reference lin
 \end{lemma}
 
 \begin{proof}
-  \color{blue}
-  fehlt sollte aber einfach sein (ist evtl schon vorhanden)
-  \color{black}
+  This follows from the intervalls $I$ being occluded. An occlusion of the intervals results in the dividing line lying in this interval being also included.
 \end{proof}
 
 The complement of $\mathcal{I}$ on the circle describes all of the locations of $\alpha_1$ which do not occlude any dividing line. This complement may be empty since there may not be a rotation which does not occlude any line. With this observations we now can easily derive an algorithm which return a rotation which maximizes our utility.
@@ -308,7 +306,6 @@ Input: $I=\{[a_1,b_1],...[a_k,b_k]\}$ $\{\alpha_1,...\alpha_m\}$)
 With this algorithm we can again use our general greedy algorithm for stacking orders.\\
 
 It may happen again that for all glyphs the local utility is zero. Again we have to use a heuristic to get better results. For instance, we can just ignore one dividing line for each glyphs and try again. This can be done iteratively until the utility is not zero for all glyphs. For the case of exactly one dividing line the utility must be bigger than zero and therefore the heuristic guarantees a better decision than just randomly tie breaking.
-
 
 \newpage
 
