Add missing set brackets

--- a/main.tex
+++ b/main.tex
@@ -286,7 +286,7 @@ The complement of $\mathcal{I}$ on the circle describes all of the locations of 
 % TODO: Labels (after everything else is nice probably)
 
 \begin{proof}
-  Algorithm 2 rotates a given dividing line in such a way, that it lies exactly in the midpoint of the biggest not occluded interval $[a_v, b_v]$. The midpoint in an interval is the point which has the maximum distance from both boundaries, $a_v$ and $b_v$. As the biggest not occluded interval maps to the circle's perimeter, it also maximizes the distance to the boundaries of the occluded intervals ${[a_1, b_1], ..., [a_k, b_k]$.
+  Algorithm 2 rotates a given dividing line in such a way, that it lies exactly in the midpoint of the biggest not occluded interval $[a_v, b_v]$. The midpoint in an interval is the point which has the maximum distance from both boundaries, $a_v$ and $b_v$. As the biggest not occluded interval maps to the circle's perimeter, it also maximizes the distance to the boundaries of the occluded intervals $\{[a_1, b_1], ..., [a_k, b_k]\}$.
 \end{proof}
 
 \begin{figure}[!bth]
